# lanthir-cli

./: Cargo.toml  README.md  rust-toolchain  shell.nix
src/: checklist.pest  checklist.rs  checklist_runner.rs  graph.rs  graph_runner.rs  lib.rs  main.rs  mermaid.pest  mermaid.rs  oats.pest  oats.rs  oats_runner.rs  runner.rs
tests/: all_together.oats  big_test.mmd  cb_test.mmd  checklist_test.ckl  ckl_tests.rs  clipbo-test.oats  cmd_test.mmd  example.oats  meta_goal.mmd  oats_test.rs  parsing.rs  peanut-butter-cookies.oats  test.mmd
