[package]
name = "lanthir-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
dialoguer = "0.11.0"
graph_builder = "0.4.0"
home = "0.5.9"
indicatif = "0.17.8"
log = "0.4.21"
pest = "2.7.8"
pest_derive = "2.7.8"
simplelog = "0.12.2"
