[package]
name = "lanthir-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "lanthir"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
arboard = { version = "3.3.2", default-features = false }
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
graph_builder = "0.4.0"
home = "0.5.9"
indicatif = "0.17.8"
log = "0.4.21"
pest = "2.7.8"
pest_derive = "2.7.8"
sha2 = "0.10.8"
simplelog = "0.12.2"
